Commit 2: Se modifico el MainPage para ir al stack Layout

--- a/MauricioMora-ExamenP2/MainPage.xaml
+++ b/MauricioMora-ExamenP2/MainPage.xaml
@@ -10,7 +10,7 @@
                FontSize="Large" 
                HorizontalOptions="Center" />
 
-        <Button Text="Ir a Recargas" Clicked="GoToRecargasPage" />
+        <Button Text="Ir a las Recargas" Clicked="GoToRecargasPage" />
     </StackLayout>
 
 </ContentPage>
