--- a/MauricioMora-ExamenP2/Resources/Styles/Styles.xaml
+++ b/MauricioMora-ExamenP2/Resources/Styles/Styles.xaml
@@ -424,4 +424,9 @@
         <Setter Property="SelectedTabColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
+    <Style x:Key="ApellidoStyle" TargetType="Label">
+        <Setter Property="TextColor" Value="CornflowerBlue" />
+        <Setter Property="FontAttributes" Value="Bold" />
+    </Style>
+
 </ResourceDictionary>
