--- a/MauricioMora-ExamenP2/Views/mmora_label2.xaml
+++ b/MauricioMora-ExamenP2/Views/mmora_label2.xaml
@@ -2,11 +2,20 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauricioMora_ExamenP2.Views.mmora_label2"
-             Title="mmora_label2">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Información Personal">
+    <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="*,*">
+       
+        <Label Text="Primer Nombre:" Grid.Row="0" Grid.Column="0" />
+        <Label Text="Mauricio" Grid.Row="0" Grid.Column="1" />
+
+        <Label Text="Segundo Nombre:" Grid.Row="1" Grid.Column="0" />
+        <Label Text="Alejandro" Grid.Row="1" Grid.Column="1" />
+
+     
+        <Label Text="Primer Apellido:" Grid.Row="2" Grid.Column="0" />
+        <Label Text="Mora" Grid.Row="2" Grid.Column="1" Style="{StaticResource ApellidoStyle}" />
+
+        <Label Text="Segundo Apellido:" Grid.Row="3" Grid.Column="0" />
+        <Label Text="Caicedo" Grid.Row="3" Grid.Column="1" Style="{StaticResource ApellidoStyle}" />
+    </Grid>
 </ContentPage>
