Commit 4: Se agrego el boton para pasar al grid layout

--- a/MauricioMora-ExamenP2/Views/mmora_label1.xaml
+++ b/MauricioMora-ExamenP2/Views/mmora_label1.xaml
@@ -12,5 +12,6 @@
                FontAttributes="Bold" 
                Margin="10,20,10,5"/>
         <Label Text="{Binding UltimaRecarga}" FontSize="Medium" />
+        <Button Text="Ir a Información Personal" Clicked="GoToGridLayout" />
     </StackLayout>
 </ContentPage>
