Commit 5: Se modifoco ligeramente el grid layout

--- a/MauricioMora-ExamenP2/Views/mmora_label2.xaml
+++ b/MauricioMora-ExamenP2/Views/mmora_label2.xaml
@@ -3,19 +3,48 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauricioMora_ExamenP2.Views.mmora_label2"
              Title="Información Personal">
-    <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="*,*">
+    <Grid RowDefinitions="Auto,Auto,Auto,Auto" 
+          ColumnDefinitions="*,*" 
+          Padding="20" 
+          RowSpacing="15" 
+          ColumnSpacing="10">
+
+      
+        <Label Text="Primer Nombre:" 
+               Grid.Row="0" Grid.Column="0" 
+               FontAttributes="Bold" 
+               HorizontalTextAlignment="End" />
+        <Label Text="Mauricio" 
+               Grid.Row="0" Grid.Column="1" 
+               HorizontalTextAlignment="Start" />
+
+      
+        <Label Text="Segundo Nombre:" 
+               Grid.Row="1" Grid.Column="0" 
+               FontAttributes="Bold" 
+               HorizontalTextAlignment="End" />
+        <Label Text="Alejandro" 
+               Grid.Row="1" Grid.Column="1" 
+               HorizontalTextAlignment="Start" />
+
+        
+        <Label Text="Primer Apellido:" 
+               Grid.Row="2" Grid.Column="0" 
+               FontAttributes="Bold" 
+               HorizontalTextAlignment="End" />
+        <Label Text="Mora" 
+               Grid.Row="2" Grid.Column="1" 
+               HorizontalTextAlignment="Start" 
+               Style="{StaticResource ApellidoStyle}" />
+
        
-        <Label Text="Primer Nombre:" Grid.Row="0" Grid.Column="0" />
-        <Label Text="Mauricio" Grid.Row="0" Grid.Column="1" />
-
-        <Label Text="Segundo Nombre:" Grid.Row="1" Grid.Column="0" />
-        <Label Text="Alejandro" Grid.Row="1" Grid.Column="1" />
-
-     
-        <Label Text="Primer Apellido:" Grid.Row="2" Grid.Column="0" />
-        <Label Text="Mora" Grid.Row="2" Grid.Column="1" Style="{StaticResource ApellidoStyle}" />
-
-        <Label Text="Segundo Apellido:" Grid.Row="3" Grid.Column="0" />
-        <Label Text="Caicedo" Grid.Row="3" Grid.Column="1" Style="{StaticResource ApellidoStyle}" />
+        <Label Text="Segundo Apellido:" 
+               Grid.Row="3" Grid.Column="0" 
+               FontAttributes="Bold" 
+               HorizontalTextAlignment="End" />
+        <Label Text="Caicedo" 
+               Grid.Row="3" Grid.Column="1" 
+               HorizontalTextAlignment="Start" 
+               Style="{StaticResource ApellidoStyle}" />
     </Grid>
 </ContentPage>
